k8s/apps/syncthing/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: syncthing
          image: docker.io/syncthing/syncthing:2.1.5@sha256:84dcf202b0890f795c4c3899d35a5ac7369bb8b72b5c270078c50247da4ddeef
          ports:
            - name: web-ui
              containerPort: 8384
              protocol: TCP
            - name: sync-tcp
              containerPort: 22000
              protocol: TCP
            - name: sync-udp
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /var/syncthing
            - name: backups
              mountPath: /mnt/backup-data/backups
            - name: documents
              mountPath: /mnt/documents
            - name: documents
              mountPath: /mnt/backup-data/documents
            - name: drive
              mountPath: /mnt/drive
            - name: drive
              mountPath: /mnt/backup-data/drive
            - name: photos
              mountPath: /mnt/photos
            - name: photos
              mountPath: /mnt/backup-data/photos
            - name: media
              mountPath: /mnt/media
            - name: repos
              mountPath: /mnt/repos
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: backups
          persistentVolumeClaim:
            claimName: syncthing-backups
        - name: documents
          persistentVolumeClaim:
            claimName: syncthing-documents
        - name: drive
          persistentVolumeClaim:
            claimName: syncthing-drive
        - name: photos
          persistentVolumeClaim:
            claimName: syncthing-photos
        - name: media
          persistentVolumeClaim:
            claimName: syncthing-media
        - name: repos
          persistentVolumeClaim:
            claimName: syncthing-repos
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: syncthing
  ports:
    - port: 80
      targetPort: 8384
      name: http
