k8s/apps/syncthing/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Syncthing"
    gethomepage.dev/description: "File synchronization"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "syncthing.png"
    gethomepage.dev/href: "https://syncthing.item.fyi"
    gethomepage.dev/siteMonitor: "http://syncthing.syncthing.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=syncthing"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`syncthing.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: syncthing
          port: 80
  tls: {}
